# organize-video

./: .env  .gitignore  CLAUDE.md  PLAN_INTEGRATION_MODULAIRE.md  REFACTORING_PLAN.md  TODO_CODE_REVIEW.md  emergency_cleanup.py  organize.py  pyproject.toml  readme.md
organize/: __init__.py  __main__.py
organize/api/: __init__.py  cache_db.py  exceptions.py  tmdb_client.py  tvdb_client.py  validation.py
organize/classification/: __init__.py  genre_classifier.py  media_info.py  text_processing.py  type_detector.py
organize/config/: __init__.py  cli.py  context.py  manager.py  settings.py
organize/filesystem/: __init__.py  discovery.py  file_ops.py  paths.py  symlinks.py
organize/models/: __init__.py  cache.py  video.py
organize/pipeline/: __init__.py  main_processor.py  orchestrator.py  processor.py  series_handler.py  video_list.py
organize/ui/: __init__.py  confirmations.py  console.py  display.py  interactive.py
organize/utils/: __init__.py  app_state.py  database.py  hash.py
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_app_state.py  test_cache_db.py  test_cli.py  test_confirmations.py  test_console.py  test_context.py  test_database.py  test_discovery.py  test_display.py  test_file_ops.py  test_genre_classifier.py  test_hash.py  test_main.py  test_main_processor.py  test_media_info.py  test_models.py  test_orchestrator.py  test_paths.py  test_processor.py  test_series_handler.py  test_symlinks.py  test_text_processing.py  test_tmdb_client.py  test_tvdb_client.py  test_type_detector.py  test_validation.py  test_video_list.py
web/: README.md  requirements.txt
web/core/: models.py  tasks.py  urls.py  views.py
web/core/management/commands/: init_settings.py
web/core/migrations/: 0001_initial.py
web/core/services/: __init__.py  tmdb_service.py  video_service.py
web/dashboard/: urls.py  views.py
web/processing/: urls.py  views.py
web/templates/: base.html
web/templates/components/: confirmation_modal.html  poster_card.html
web/templates/core/: home.html  settings.html  settings_directories.html  settings_hash_db.html
web/templates/core/partials/: setting_row.html
web/templates/dashboard/: index.html  logs.html
web/templates/dashboard/partials/: log_list.html
web/templates/processing/: confirmations.html  job_create.html  job_detail.html  job_list.html
web/templates/processing/partials/: confirmation_card.html  job_progress.html  no_confirmations.html
web/videomanager/: asgi.py  settings.py  urls.py  wsgi.py
