[project]
name = "organize"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "guessit>=3.8.0",
    "loguru>=0.7.3",
    "requests>=2.32.5",
    "tvdb-api>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
