[project]
name = "organize"
version = "1.0.0"
description = "Video library organization tool with TMDB/TVDB integration"
requires-python = ">=3.13"
readme = "readme.md"
license = {text = "MIT"}
keywords = ["video", "organization", "tmdb", "tvdb", "media"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "babelfish>=0.6.1",
    "guessit>=3.8.0",
    "loguru>=0.7.3",
    "pymediainfo>=7.0.1",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "tqdm>=4.67.1",
    "tvdb-api>=3.1.0",
]

[project.scripts]
organize-video = "organize.__main__:main"

[project.optional-dependencies]
web = [
    "django>=5.0",
    "django-htmx>=1.17.0",
    "huey>=2.5.0",
    "pillow>=10.0.0",
    "whitenoise>=6.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["organize"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["organize"]
